# spotify-analytics

./: pyproject.toml
config/: api_router.py  celery_app.py  urls.py
config/settings/: base.py  test.py
spotify_analytics/analytics/: apps.py  urls.py  views.py
spotify_analytics/core/: apps.py  clients.py  models.py
spotify_analytics/core/migrations/: 0001_initial.py  0002_track_release_date.py  0003_listeninghistory.py  0004_listeninghistory_unique_listeninghistory_user_played_at_ms.py  0005_remove_listeninghistory_unique_listeninghistory_user_played_at_ms.py  0006_listeninghistory_ip_addr.py  0007_alter_listeninghistory_ip_addr.py
spotify_analytics/imports/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
spotify_analytics/imports/migrations/: 0001_initial.py  0002_parsedspotifylisten.py  0003_alter_parsedspotifylisten_offline_timestamp.py  0004_alter_parsedspotifylisten_offline.py  0005_parsedspotifylisten_ip_addr.py
spotify_analytics/spotify/: apps.py  services.py  urls.py  views.py
spotify_analytics/users/: apps.py  models.py
spotify_analytics/users/migrations/: 0001_initial.py
